--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body {
     width: 100px;
     height: 50px;
     flex: 1;
+    justify-content: center;
 }
 
 .input-field {
@@ -22,13 +23,15 @@ body {
     align-items: center;
 }
 
+                        /*LEFT INPUT */
+
 .left-input {
     flex-direction: column;
     flex: 1;
     max-width: 200px;
 }
 
-.number, #clear {
+.number, #clear, .operator, #equals {
     width: 50px;
     height: 50px;
     flex: 1;
@@ -37,6 +40,7 @@ body {
 .number {
     margin-top: 5px;
     background-color: aqua;
+
 }
 
 #clear {
@@ -48,4 +52,29 @@ body {
 #zero {
     width: 160px;
     background-color: aquamarine;
+}
+
+                        /*RIGHT INPUT */
+
+.right-input {
+    flex-direction: column;
+    flex: 1;
+    max-width: 100px;
+}
+
+#add {
+    margin-top: 3rem;
+    flex: 1;
+}
+
+.operator {
+    margin-top: 5px;
+    flex: 1;
+    background-color:chocolate;
+}
+
+#equals {
+    margin-top: 5px;
+    background-color: blueviolet;
+    flex: 1;
 }
